fix: down button overlaps percentage text

--- a/src/components/tiles/tile-navigator.scss
+++ b/src/components/tiles/tile-navigator.scss
@@ -22,6 +22,10 @@
     .tile-navigator {
       border-radius: 3px 3px 0 0;
     }
+
+    .navigator-panning-buttons {
+      top: 0;
+    }
   }
 
   &.animate {
